--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,7 @@ button {
 .header {
   border: 1px solid var(--border-color);
   background: var(--white-color);
+  position: relative;
 }
 
 .header .container {
@@ -147,13 +148,29 @@ button {
   margin: 0px;
 }
 
+.nav li:not(:last-child) {
+  margin-right: var(--standart-50px);
+}
+
 .nav-link {
+  position: relative;
   color: var(--main-text-color);
   font-weight: 500;
 }
 
-.nav li:not(:last-child) {
-  margin-right: var(--standart-50px);
+.current::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  color: white;
+  background: var(--active-link-color);
+  border-radius: 2px;
+  position: absolute;
+
+  /* bottom: 40; */
+  left: 0;
+  margin-top: 45px;
+  display: inline-block;
 }
 
 .nav,
