--- a/css/styles.css
+++ b/css/styles.css
@@ -630,6 +630,7 @@ main {
 .portfolio-thumb {
   cursor: pointer;
   position: relative;
+  overflow: hidden;
 }
 
 .portfolio-description {
@@ -638,18 +639,15 @@ main {
   top: 0;
   background: rgba(33, 150, 243, 0.9);
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   padding: 63px 24px;
   color: var(--white-color);
-  opacity: 0;
-  transition: 500ms opacity linear;
-}
-
-.portfolio-description:hover {
+  transform: translateY(100%);
   opacity: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters-button:hover {
@@ -690,6 +688,10 @@ main {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-description {
+  transform: translateY(0%);
 }
 
 .portfolio-heading {
