--- a/css/styles.css
+++ b/css/styles.css
@@ -740,3 +740,22 @@ main {
 .contacts-section .section-title {
   padding-bottom: var(--standart-50px);
 }
+
+/* модалка */
+.backdrop-sign {
+  position: fixed;
+  display: flex;
+
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #80808080;
+}
+
+.modal-sign {
+  width: 200px;
+  height: 300px;
+  background-color: #fff;
+}
