--- a/css/styles.css
+++ b/css/styles.css
@@ -742,20 +742,63 @@ main {
 }
 
 /* модалка */
-.backdrop-sign {
+.backdrop {
   position: fixed;
   display: flex;
-
   align-items: center;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #80808080;
+  min-height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-sign {
-  width: 200px;
-  height: 300px;
-  background-color: #fff;
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop-modal {
+  position: relative;
+  margin: auto;
+  width: 528px;
+  height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.backdrop-modal-button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  margin-left: auto;
+  width: 30px;
+  height: 30px;
+  fill: currentColor;
+}
+
+/* временно для прикола */
+.modal-title,
+.modal-text {
+  display: block;
+  margin: auto;
+  margin-top: var(--standart-94px);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+
+  text-align: center;
+}
+
+.modal-text {
+  font-weight: 400;
+  font-size: 15px;
 }
