--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
     0.1
   ); /*цвет фона социальной сети footer неактивный rgba(255, 255, 255, 0.1) */
 
+  --standart-15px: 15px;
   --standart-30px: 30px;
   --standart-50px: 50px;
   --standart-94px: 94px;
@@ -98,12 +99,16 @@ body {
   max-width: 1600px;
   margin: auto;
   background: var(--main-background-color);
+  text-align: center;
 }
 
 .container {
   width: auto;
-  padding: var(--standart-94px) 215px;
+  padding: var(--standart-94px) var(--standart-15px);
   display: flex;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
 }
 
 button {
@@ -139,13 +144,15 @@ button {
   border: 1px solid var(--border-color);
   background: var(--white-color);
   position: relative;
+  align-content: center;
 }
 
 .header .container {
   align-items: center;
   margin-bottom: 0px;
-  padding: 24px 215px 25px;
-  margin: 0px;
+  padding: 24px var(--standart-15px) 25px;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .nav li:not(:last-child) {
@@ -228,10 +235,12 @@ footer {
 }
 
 footer .container {
-  padding: 60px 215px;
+  padding: 60px var(--standart-15px);
   margin: 0px;
   display: flex;
   height: 100%;
+  margin: auto;
+  max-width: 1200px;
 }
 
 .logo-link-footer {
@@ -311,8 +320,8 @@ main {
 
 /* геройчик */
 .hero {
-  padding: 200px;
-  background: #c4c4c4;
+  padding: 200px var(--standart-15px);
+  background: #2f303a;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -320,8 +329,7 @@ main {
     ),
     url('../images/main-bg.jpg');
   background-size: contain, contain;
-  min-height: 600px;
-  width: 100%;
+  max-width: 100%;
 }
 
 .hero-title {
@@ -372,6 +380,7 @@ main {
   background: var(--light-grey-color);
   border-radius: 4px;
   cursor: pointer;
+  margin-bottom: var(--standart-30px);
 }
 
 .features-icon {
@@ -408,8 +417,7 @@ main {
 
 .features-title {
   color: var(--main-text-color);
-  padding-top: var(--standart-30px);
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .features-text {
@@ -462,7 +470,14 @@ main {
 
 .team-section {
   background: var(--light-grey-color);
-  padding: var(--standart-94px) 215px;
+  margin: auto;
+  display: block;
+  text-align: center;
+  max-width: 100%;
+}
+
+.container.team {
+  display: block;
 }
 
 .team-set {
@@ -471,6 +486,7 @@ main {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  max-width: 1200px;
 }
 
 .team-item {
@@ -485,6 +501,10 @@ main {
   margin-right: var(--standart-30px);
 }
 
+.team-thumb img {
+  width: 270px;
+}
+
 .team-content {
   padding: var(--standart-30px);
 }
@@ -495,14 +515,14 @@ main {
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   font-weight: 500;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .team-profession {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
   color: var(--secondary-text-color);
 }
 
@@ -587,6 +607,8 @@ main {
   justify-content: center;
   align-items: center;
   color: var(--passive-background-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-item:not(:last-child) {
@@ -595,7 +617,7 @@ main {
 
 .clients-item:hover {
   color: var(--active-link-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid var(--active-link-color);
 }
 
 /* 
